--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,8 @@ asyncio==3.4.3
 uvicorn[standard]==0.34.3
 rdflib==7.1.4
 SPARQLWrapper==2.0.0
+PyQt6==6.9.1
+PyQt6-Qt6==6.9.1
+PyQt6-sip==13.10.2
+python-dateutil==2.9.0
+pyqtgraph==0.13.7
